--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -26,6 +26,8 @@ jobs:
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
+      working-directory: ./islands_engine
       run: mix deps.get
     - name: Run tests
+      working-directory: ./islands_engine
       run: mix test
